[package]
name = "solprobe"
version = "0.1.0"
edition = "2021"
authors = ["vivek <31vivekpal@gmail.com>"]
description = "probing the solana network for diagnostics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/m0.12.7est.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.39.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
solana-client = "2.0.6"
solana-sdk = "2.0.6"
log = "0.4.21"
env_logger = "0.11.5"
chrono = "0.4.35"
toml = "0.8.19"
indicatif = "0.17"
thiserror = "1.0"
crossterm = "0.28.1"
tui = { package = "ratatui", version = "0.28.0" }
futures = "0.3.30"
async-trait = "0.1.77"
bytesize = "1.3.0"
zeroize = "1.7.0"

[workspace]
resolver = "2"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"