[package]
name = "solprobe"
version = "0.1.0"
edition = "2021"
authors = ["vivek <31vivekpal@gmail.com>"]
description = "probing the solana network for diagnostics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/m0.12.7est.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
solana-client = "2.0.0"
solana-sdk = "2.0.0"
solana-program = "2.0.0"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
toml = "0.8.19"
indicatif = "0.17.8"  
thiserror = "1.0.63"
crossterm = "0.28.1"
tui = { package = "ratatui", version = "0.28.1" }
futures = "0.3.30"
async-trait = "0.1.81"
bytesize = "1.3.0"
elliptic-curve = "0.13"
zeroize = "1.3.0"

[workspace]
resolver = "2"
